# oic-sequence-gen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_standalone.py  oic_sequence_gen_standalone.py  pyproject.toml
.github/workflows/: ci.yml
src/oic_sequence_gen/: __init__.py  __main__.py  cli.py  constants.py  parser.py
src/oic_sequence_gen/generators/: __init__.py  mermaid.py  plantuml.py  png.py
tests/: test_cli.py  test_constants.py  test_generators.py  test_parser.py
