[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata (PEP 621) ─────────────────────────────────────────────────
[project]
name            = "oic-sequence-gen"
version         = "0.1.0"
description     = "Generate PlantUML / Mermaid / PNG sequence diagrams from Oracle Integration Cloud (.iar) archives"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies    = []        # stdlib-only: no runtime dependencies

keywords = [
    "oracle", "oic", "oracle-integration-cloud",
    "plantuml", "mermaid", "sequence-diagram", "iar",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.scripts]
oic-sequence-gen = "oic_sequence_gen.cli:main"

[project.urls]
Homepage   = "https://github.com/YOUR_USER/oic-sequence-gen"
Issues     = "https://github.com/YOUR_USER/oic-sequence-gen/issues"
Changelog  = "https://github.com/YOUR_USER/oic-sequence-gen/blob/main/CHANGELOG.md"

# ── Setuptools: src layout ─────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
src            = ["src"]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # line-length handled by formatter

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.7",
]
